add new tire, multer, cloudinary, new env

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,17 @@ MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_URL=
 MONGODB_DB=
+
+# 
+# 
+# 
+
+BACKEND_DOMAIN=
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+# 
+SAVE_FILE_STRATEGY=cloudinary || local
